Todo: Agregar el resto de juegos y vinculos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="item" id="maze-game">
                 <div class="content">
-                    <div class="name">Laberito</div>
+                    <div class="name">Laberinto</div>
                     <div class="des">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ab, eum!</div>
                     <button>See More</button>
                 </div>
